@@ -34,6 +34,7 @@ For fixes or providing information which led to a fix:
        Bill Schottstaedt
    Miroslav Silovic
     Dale P. Smith
+      Masao Uebayashi
  Jacques A. Vidrine
       Brett Viren
     William Webber
